New extendable object pool.